# atomview

./: .gitignore  .gitmodules  CMakeLists.txt  compileshaders.sh  debug.sh  make.sh  runtest.sh  setup-env.sh  vcpkg.json
shaders/: shader.frag  shader.vert
src/: Application.cpp  Application.hpp  AtomicSystem.cpp  AtomicSystem.hpp  Camera.cpp  Camera.hpp  Icosphere.cpp  Icosphere.hpp  ImGui.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp  main.cpp
test/: test.xyz
